--- a/ejercicio formularios.html
+++ b/ejercicio formularios.html
@@ -42,6 +42,13 @@
         <label for="numero">ingrese su numero</label>
         <input type="text" id="numero" pattern="[0-9] {0,10}" />
       </div>
+      <div>
+        <label for="ciudad">seleccione su ciudad</label>
+        <select name="ciudad" id="ciudad" disabled>
+          <option value="1">giron</option>
+          <option value="2">bucaramanga</option>
+          </select>
+      </div>
       <button type="submit">guardar</button>
     </form>
   </body>
