--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inicio</title>
-</head>
-<body>
-    <header>
-        <img src="descarga.png" alt="90" width="150">
-        <nav>
-            <ul>
-                <li>
-                    <a href="intex.html">A</a>
-                </li>
-                <li>
-                    <a href="1.html">B</a>
-                </li>
-                <li>
-                    <a href="2.html">C</a>
-                </li>
-                
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h1>tercero</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti unde officia tenetur voluptas, sunt ab! Quae fugit, dicta ipsa neque eum odit obcaecati vero consequatur, non magni reprehenderit fugiat officia?</p>
-        </section>
-</main>
 
-<script src="main.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Document</title>
+  <link rel="stylesheet" href="css/estilo.css">
+</head>
+
+<body>
+  <header id="header">
+    <nav>
+      <ul>
+        <li class="item">item 1</li>
+        <li class="item">item 2</li>
+        <li class="item">item 3</li>
+      </ul>
+    </nav>
+  </header>
+  <input type="text">
+  <input type="email">
+  <hr>
+  <h1>hola señor buenos dias</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus veritatis modi eius libero velit blanditiis tempora
+    magnam recusandae officia sunt doloribus provident nobis, maxime reiciendis est ad consequatur? Laboriosam, non.
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ex velit delectus sint. Inventore consequatur
+    consequuntur tempora quos quam atque quis voluptate, <span>officia quae quaerat officiis!</span> Alias hic aliquam
+    voluptatem!
+  </p>
+  <hr>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe porro minima maxime enim sapiente dignissimos
+    eligendi neque, temporibus iusto, tempore suscipit quisquam quaerat maiores repudiandae ipsum corrupti inventore
+    labore laborum.
+  </p>
+  <hr>
+  <div class="caja">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quas eum, porro magnam ipsa mollitia
+    ea nihil voluptatum neque veritatis cumque temporibus veniam commodi, deserunt numquam possimus expedita modi a.
+  </div>
 </body>
+
 
 </html>
