--- a/index.html
+++ b/index.html
@@ -5,16 +5,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="goku.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <img src="spidy.jpg" alt="spidy" class="spidy">
-  <div class="box">
-    <p>spiderman</p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci, velit!
-  </div>
-  <img src="goku.png" alt="goku" class="goku">
+  <header class="header">
+    <h1 class="title">Colores CSS</h1>
+  </header>
+  <main>
+    <section id="section">
+      <div class="contenedor">
+        <div class="img">
+          <h1 class="titulo">Imagen para el SENA</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, incidunt?
+          </p>
+        </div>
+        <div id="img">
+          <h1 class="titulo">Imagen para el SENA</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, excepturi?
+          </p>
+          </h1>
+        </div>
+      </div>
+    </section>
+    <section class="section atachment">
+      <h1 class="titulo">Imagen para el SENA</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, excepturi?
+      </p>
+    </section>
+  </main>
 
 </body>
 
